[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/player/extra_life (1).png" type="Texture" id=1]
[ext_resource path="res://Scripts/Items/Item.gd" type="Script" id=2]
[ext_resource path="res://Assets/Money.png" type="Texture" id=3]
[ext_resource path="res://Assets/player/shadow.png" type="Texture" id=4]
[ext_resource path="res://Assets/Font1.tres" type="DynamicFont" id=5]

[node name="Item" type="Area2D"]
collision_layer = 128
collision_mask = 64
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 18
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="Tween3" type="Tween" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
position = Vector2( 0, 30 )
scale = Vector2( 0.653616, 0.653616 )
texture = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -47.5255
margin_top = 6.85229
margin_right = 67.4745
margin_bottom = 121.852
texture = ExtResource( 3 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -36.5458
margin_top = 51.1735
margin_right = -2.54584
margin_bottom = 73.1735
custom_fonts/font = ExtResource( 5 )
text = "10"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="." to="." method="_on_Item_area_entered"]
